# R-Tree-Spatial-Search

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
api/: advanced_endpoints.py  main.py  requirements.txt
api/tests/: __init__.py  conftest.py  test_main.py
configs/: etl_config.yaml
database/: connection.py
database/functions/: performance_monitoring.sql  rtree_helpers.sql  spatial_functions.sql
database/indexes/: performance_indexes.sql  spatial_indexes.sql
database/init/: 01_setup_extensions.sql  02_create_schema.sql  03_create_indexes.sql  04_helper_functions.sql
database/migrations/: 001_initial_schema.sql  002_spatial_indexes.sql  003_rtree_metadata.sql  004_performance_optimization.sql
database/schemas/admin/: api_keys.sql  user_management.sql
database/schemas/analytics/: query_performance.sql  usage_statistics.sql
database/schemas/core/: properties.sql  rtree_nodes.sql  spatial_metadata.sql
database/setup/: create_extensions.sql  grant_permissions.sql  init_database.sql  init_database_flat.sql
database/tests/: conftest.py  test_connection.py
database/triggers/: audit_triggers.sql  cache_invalidation.sql
database/views/: analytics_views.sql  property_views.sql
docs/: API.md  README.md
etl/: __init__.py  amenity_etl.py  base_etl.py  boundary_etl.py  db_manager.py  etl_config.py  etl_runner.py  property_etl.py
etl/tests/: conftest.py  test_property_etl.py
monitoring/: performance_tracker.py
rtree_engine/: CMakeLists.txt  __init__.py  python_bindings.cpp  setup.py
rtree_engine/data/: properties.json
rtree_engine/src/: RTree.cpp  RTree.h  RTreeNode.cpp  RTreeNode.h  engine.cpp  engine.h  geometry.cpp  geometry.h  main.cpp  property.h
rtree_engine/tests/: test_geometry.cpp
scripts/: dev_setup.sh  generate_sample_data.py  load_sample_data.py  run_etl.py  setup_database.py
tests/: README.md  conftest.py
tests/integration/: test_advanced_features.py  test_api.py
utils/: helpers.py
